# data_engineer_portfolio

./: .gitignore  README.md  ffmpeg_cmd.py  mov_to_gif.py  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.config.ts
.github/workflows/: build_check.yml  build_docker_image.yml  deploy_api_handler.yml  deploy_apps_script.yml  deploy_content_lambda.yml  deploy_content_processing.yml  deploy_sqs_worker.yml  deploy_status_checker.yml
diagrams/: content_arch.d2
docker_images/: api_handler_lambda.Dockerfile  content_lambda_image.Dockerfile  content_processing.Dockerfile  sqs_worker_lambda.Dockerfile  status_checker_lambda.Dockerfile
docs/: error_handling_guide.md
public/: offline.html  sw.js
public/favicon_io/: site.webmanifest
src/: middleware.ts
src/app/: globals.css  layout.tsx  loading-wrapper.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/archive/: page.tsx
src/app/blog/: page.tsx
src/app/content_arch/: page.tsx
src/app/privacy-policy/: page.tsx
src/app/projects/: page.tsx
src/app/projects_old/: page.tsx
src/app/projects_trash/: page.tsx
src/app/qr/: page.tsx
src/app/resume/: page.tsx
src/components/: ClientOnly.tsx  DataBackground.tsx  DataVisualization.tsx  QrCodeGenerator.tsx  ServiceWorkerHandler.tsx
src/data/: blog-data.ts  projects.ts  skills.ts
src/lib/: dynamodb.ts  serviceWorkerRegistration.ts
src/penguindb/: README.md
src/types/: blog.ts  components.d.ts  project.ts  qr-code-styling.d.ts  skill.ts
temp-project/: package-lock.json
(+54 files in other folders)
