[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penguindb"
dynamic = ["version"]
description = "A simple package for penguindb"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanchit Vijay", email = "sanchitvj1026@gmail.com" }, ]

dependencies = [
    "boto3>=1.34.73",
    "botocore>=1.34.73",
    "aioboto3>=14.1.0"
]

[project.urls]
#homepage = "https://github.com/yourusername/my_project"
repository = "https://github.com/sanchitvj/data_engineer_portfolio"
#documentation = "https://yourusername.github.io/my_project"

[tool.hatch.version]
path = "src/penguindb/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
]

[tool.ruff]
# exclude = 

[tool.mypy]
ignore_missing_imports = true
# exclude = 